# Translation

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  create_second_db.sh  docker-compose.yml
migrations/: 001_initial_schema.sql
src/: main.rs
src/commands/: help.rs  mod.rs  setlog.rs  stats.rs
src/db/: mod.rs  pool.rs  repository.rs
src/handlers/: message.rs  mod.rs
src/models/: channel.rs  guild.rs  history.rs  mod.rs
src/services/: mod.rs  translator.rs
src/utils/: config.rs  mod.rs  permissions.rs
